GMC-247 UD IC Feature/sonar code cleanup (#2)
* Add inspection files

* Reformat the entire project

* Rearranged entries for the entire project

* Remove unused drawable

* Correct a lot of inspection warnings

* Add the UserInfo related objects back as they will be needed in the future

* Add the contents of the classes back in as they weren't retrieved properly in the previous reset.

* Re-added UserInfo related code as is required