@@ -23,6 +23,7 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.gsma.mobileconnect.oidc.ParsedIdToken;
 import com.gsma.mobileconnect.oidc.RequestTokenResponse;
+
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -32,7 +33,11 @@ import org.robolectric.RobolectricTestRunner;
 import java.io.IOException;
 import java.util.Calendar;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 
 @RunWith(RobolectricTestRunner.class)
 public class JsonUtilsTest
@@ -44,11 +49,11 @@ public class JsonUtilsTest
     public void extractUrl_withMissingLinksNode_shouldReturnNull()
     {
         // GIVEN
-        ObjectMapper mapper = new ObjectMapper();
-        JsonNode root = mapper.createObjectNode();
+        final ObjectMapper mapper = new ObjectMapper();
+        final JsonNode root = mapper.createObjectNode();
 
         // WHEN
-        String url = JsonUtils.extractUrl(root, "MISSING");
+        final String url = JsonUtils.extractUrl(root, "MISSING");
 
         // THEN
         assertNull(url);
@@ -58,13 +63,13 @@ public class JsonUtilsTest
     public void extractUrl_withMissingUrl_shouldReturnNull()
     {
         // GIVEN
-        ObjectMapper mapper = new ObjectMapper();
-        ObjectNode root = mapper.createObjectNode();
-        ArrayNode links = mapper.createArrayNode();
+        final ObjectMapper mapper = new ObjectMapper();
+        final ObjectNode root = mapper.createObjectNode();
+        final ArrayNode links = mapper.createArrayNode();
         root.set("links", links);
 
         // WHEN
-        String url = JsonUtils.extractUrl(root, "MISSING");
+        final String url = JsonUtils.extractUrl(root, "MISSING");
 
         // THEN
         assertNull(url);
@@ -74,21 +79,21 @@ public class JsonUtilsTest
     public void extractUrl_withUrl_shouldReturnUrl()
     {
         // GIVEN
-        ObjectMapper mapper = new ObjectMapper();
-        ObjectNode root = mapper.createObjectNode();
-        ArrayNode links = mapper.createArrayNode();
+        final ObjectMapper mapper = new ObjectMapper();
+        final ObjectNode root = mapper.createObjectNode();
+        final ArrayNode links = mapper.createArrayNode();
         root.set("links", links);
 
-        ObjectNode link = mapper.createObjectNode();
-        String relToFind = "relToFind";
+        final ObjectNode link = mapper.createObjectNode();
+        final String relToFind = "relToFind";
         link.put("rel", relToFind);
-        String expectedHref = "hrefToFind";
+        final String expectedHref = "hrefToFind";
         link.put("href", expectedHref);
 
         links.add(link);
 
         // WHEN
-        String url = JsonUtils.extractUrl(root, relToFind);
+        final String url = JsonUtils.extractUrl(root, relToFind);
 
         // THEN
         assertEquals(expectedHref, url);
@@ -98,18 +103,18 @@ public class JsonUtilsTest
     public void extractUrl_withNoRelField_shouldReturnUrl()
     {
         // GIVEN
-        ObjectMapper mapper = new ObjectMapper();
-        ObjectNode root = mapper.createObjectNode();
-        ArrayNode links = mapper.createArrayNode();
+        final ObjectMapper mapper = new ObjectMapper();
+        final ObjectNode root = mapper.createObjectNode();
+        final ArrayNode links = mapper.createArrayNode();
         root.set("links", links);
 
-        ObjectNode link = mapper.createObjectNode();
+        final ObjectNode link = mapper.createObjectNode();
         link.put("href", "href");
 
         links.add(link);
 
         // WHEN
-        String url = JsonUtils.extractUrl(root, "relToFind");
+        final String url = JsonUtils.extractUrl(root, "relToFind");
 
         // THEN
         assertNull(url);
@@ -119,19 +124,19 @@ public class JsonUtilsTest
     public void getErrorResponse_withErrorFields_shouldReturnErrorResponse() throws IOException
     {
         // GIVEN
-        String expectedError = "EXPECTED ERROR";
-        String expectedErrorDescription = "EXPECTED ERROR_DESCRIPTION";
-        String expectedDescription = "EXPECTED DESCRIPTION";
-        String expectedErrorUri = "EXPECTED ERROR_URI";
-        String json = "{ \"error\": \""+ expectedError +"\", "
-            + "\"error_description\": \"" + expectedErrorDescription+ "\", "
-            + "\"description\": \"" + expectedDescription+ "\", "
-            + "\"error_uri\": \"" + expectedErrorUri + "\" }";
-        ObjectMapper mapper = new ObjectMapper();
-        JsonNode root = mapper.readTree(json);
+        final String expectedError = "EXPECTED ERROR";
+        final String expectedErrorDescription = "EXPECTED ERROR_DESCRIPTION";
+        final String expectedDescription = "EXPECTED DESCRIPTION";
+        final String expectedErrorUri = "EXPECTED ERROR_URI";
+        final String json =
+                "{ \"error\": \"" + expectedError + "\", " + "\"error_description\": \"" + expectedErrorDescription +
+                "\", " + "\"description\": \"" + expectedDescription + "\", " + "\"error_uri\": \"" + expectedErrorUri +
+                "\" }";
+        final ObjectMapper mapper = new ObjectMapper();
+        final JsonNode root = mapper.readTree(json);
 
         // WHEN
-        ErrorResponse errorResponse = JsonUtils.getErrorResponse(root);
+        final ErrorResponse errorResponse = JsonUtils.getErrorResponse(root);
 
         // THEN
         assertNotNull(errorResponse);
@@ -144,15 +149,13 @@ public class JsonUtilsTest
     public void getErrorResponse_withNoError_shouldReturnNull() throws IOException
     {
         // GIVEN
-        String json = "{ \"no-error\": \"value\", "
-                + "\"error_description\": \"error_description\", "
-                + "\"description\": \"description\", "
-                + "\"error_uri\": \"error_uri\" }";
-        ObjectMapper mapper = new ObjectMapper();
-        JsonNode root = mapper.readTree(json);
+        final String json = "{ \"no-error\": \"value\", " + "\"error_description\": \"error_description\", " +
+                            "\"description\": \"description\", " + "\"error_uri\": \"error_uri\" }";
+        final ObjectMapper mapper = new ObjectMapper();
+        final JsonNode root = mapper.readTree(json);
 
         // WHEN
-        ErrorResponse errorResponse = JsonUtils.getErrorResponse(root);
+        final ErrorResponse errorResponse = JsonUtils.getErrorResponse(root);
 
         // THEN
         assertNull(errorResponse);
@@ -162,17 +165,17 @@ public class JsonUtilsTest
     public void getErrorResponse_withNoErrorDescription_shouldReturnDescription() throws IOException
     {
         // GIVEN
-        String expectedError = "EXPECTED ERROR";
-        String expectedDescription = "EXPECTED DESCRIPTION";
-        String expectedErrorUri = "EXPECTED ERROR_URI";
-        String json = "{ \"error\": \""+ expectedError +"\", "
-                + "\"description\": \"" + expectedDescription+ "\", "
-                + "\"error_uri\": \"" + expectedErrorUri + "\" }";
-        ObjectMapper mapper = new ObjectMapper();
-        JsonNode root = mapper.readTree(json);
+        final String expectedError = "EXPECTED ERROR";
+        final String expectedDescription = "EXPECTED DESCRIPTION";
+        final String expectedErrorUri = "EXPECTED ERROR_URI";
+        final String json =
+                "{ \"error\": \"" + expectedError + "\", " + "\"description\": \"" + expectedDescription + "\", " +
+                "\"error_uri\": \"" + expectedErrorUri + "\" }";
+        final ObjectMapper mapper = new ObjectMapper();
+        final JsonNode root = mapper.readTree(json);
 
         // WHEN
-        ErrorResponse errorResponse = JsonUtils.getErrorResponse(root);
+        final ErrorResponse errorResponse = JsonUtils.getErrorResponse(root);
 
         // THEN
         assertNotNull(errorResponse);
@@ -185,17 +188,17 @@ public class JsonUtilsTest
     public void getErrorResponse_withNoDescription_shouldReturnErrorDescription() throws IOException
     {
         // GIVEN
-        String expectedError = "EXPECTED ERROR";
-        String expectedErrorDescription = "EXPECTED ERROR_DESCRIPTION";
-        String expectedErrorUri = "EXPECTED ERROR_URI";
-        String json = "{ \"error\": \""+ expectedError +"\", "
-                + "\"error_description\": \"" + expectedErrorDescription+ "\", "
-                + "\"error_uri\": \"" + expectedErrorUri + "\" }";
-        ObjectMapper mapper = new ObjectMapper();
-        JsonNode root = mapper.readTree(json);
+        final String expectedError = "EXPECTED ERROR";
+        final String expectedErrorDescription = "EXPECTED ERROR_DESCRIPTION";
+        final String expectedErrorUri = "EXPECTED ERROR_URI";
+        final String json =
+                "{ \"error\": \"" + expectedError + "\", " + "\"error_description\": \"" + expectedErrorDescription +
+                "\", " + "\"error_uri\": \"" + expectedErrorUri + "\" }";
+        final ObjectMapper mapper = new ObjectMapper();
+        final JsonNode root = mapper.readTree(json);
 
         // WHEN
-        ErrorResponse errorResponse = JsonUtils.getErrorResponse(root);
+        final ErrorResponse errorResponse = JsonUtils.getErrorResponse(root);
 
         // THEN
         assertNotNull(errorResponse);
@@ -208,10 +211,10 @@ public class JsonUtilsTest
     public void parseJson_withValidJson_shouldSucceed() throws IOException
     {
         // GIVEN
-        String json = "{ \"field\": \"value\" }";
+        final String json = "{ \"field\": \"value\" }";
 
         // WHEN
-        JsonNode root = JsonUtils.parseJson(json);
+        final JsonNode root = JsonUtils.parseJson(json);
 
         // THEN
         assertNotNull(root);
@@ -222,10 +225,10 @@ public class JsonUtilsTest
     public void parseJson_withEmptyString_shouldReturnMissingNode() throws IOException
     {
         // GIVEN
-        String json = "";
+        final String json = "";
 
         // WHEN
-        JsonNode root = JsonUtils.parseJson(json);
+        final JsonNode root = JsonUtils.parseJson(json);
 
         // THEN
         assertNotNull(root);
@@ -236,45 +239,40 @@ public class JsonUtilsTest
     public void parseJson_withInvalidJson_shouldThrowIOException() throws IOException
     {
         // GIVEN
-        String json = "{ \"field\" }";
+        final String json = "{ \"field\" }";
 
         // THEN
-        thrown.expect(IOException.class);
+        this.thrown.expect(IOException.class);
 
         // WHEN
         JsonUtils.parseJson(json);
     }
 
     @Test
-    public void parseOperatorIdentifiedDiscoveryResult_withValidOperatorIdentifiedDiscoveryResult_shouldSucceed() throws IOException
+    public void parseOperatorIdentifiedDiscoveryResult_withValidOperatorIdentifiedDiscoveryResult_shouldSucceed() throws
+                                                                                                                  IOException
     {
         // GIVEN
-        String expectedClientId = "EXPECTED CLIENT_ID";
-        String expectedClientSecret = "EXPECTED CLIENT_SECRET";
-        String expectedAuthorizationHref = "EXPECTED AUTHORIZATION_HREF";
-        String expectedTokenHref = "EXPECTED TOKEN_HREF";
-        String expectedUserInfoHref = "EXPECTED USER_INFO_HREF";
-        String expectedPremiumInfoHref = "EXPECTED PREMIUM_INFO_HREF";
-        String jsonStr = "{ \"response\": {"
-                + " \"client_id\": \"" + expectedClientId + "\", "
-                + " \"client_secret\": \"" + expectedClientSecret + "\", "
-                + " \"apis\": {"
-                + " \"operatorid\": {"
-                + " \"link\": ["
-                + " { \"rel\": \"authorization\", "
-                + " \"href\": \"" + expectedAuthorizationHref + "\"}, "
-                + " { \"rel\": \"token\", "
-                + " \"href\": \"" + expectedTokenHref + "\"}, "
-                + " { \"rel\": \"userinfo\", "
-                + " \"href\": \"" + expectedUserInfoHref + "\"}, "
-                + " { \"rel\": \"premiuminfo\", "
-                + " \"href\": \"" + expectedPremiumInfoHref + "\"} "
-                + "]}}}}";
-        ObjectMapper mapper = new ObjectMapper();
-        JsonNode root = mapper.readTree(jsonStr);
+        final String expectedClientId = "EXPECTED CLIENT_ID";
+        final String expectedClientSecret = "EXPECTED CLIENT_SECRET";
+        final String expectedAuthorizationHref = "EXPECTED AUTHORIZATION_HREF";
+        final String expectedTokenHref = "EXPECTED TOKEN_HREF";
+        final String expectedUserInfoHref = "EXPECTED USER_INFO_HREF";
+        final String expectedPremiumInfoHref = "EXPECTED PREMIUM_INFO_HREF";
+        final String jsonStr =
+                "{ \"response\": {" + " \"client_id\": \"" + expectedClientId + "\", " + " \"client_secret\": \"" +
+                expectedClientSecret + "\", " + " \"apis\": {" + " \"operatorid\": {" + " \"link\": [" +
+                " { \"rel\": \"authorization\", " + " \"href\": \"" + expectedAuthorizationHref + "\"}, " +
+                " { \"rel\": \"token\", " + " \"href\": \"" + expectedTokenHref + "\"}, " +
+                " { \"rel\": \"userinfo\", " + " \"href\": \"" + expectedUserInfoHref + "\"}, " +
+                " { \"rel\": \"premiuminfo\", " + " \"href\": \"" + expectedPremiumInfoHref + "\"} " + "]}}}}";
+        final ObjectMapper mapper = new ObjectMapper();
+        final JsonNode root = mapper.readTree(jsonStr);
 
         // WHEN
-        ParsedOperatorIdentifiedDiscoveryResult parsedOperatorIdentifiedDiscoveryResult = JsonUtils.parseOperatorIdentifiedDiscoveryResult(root);
+        final ParsedOperatorIdentifiedDiscoveryResult parsedOperatorIdentifiedDiscoveryResult = JsonUtils
+                .parseOperatorIdentifiedDiscoveryResult(
+                root);
 
         // THEN
         assertNotNull(parsedOperatorIdentifiedDiscoveryResult);
@@ -287,29 +285,24 @@ public class JsonUtilsTest
     }
 
     @Test
-    public void parseOperatorIdentifiedDiscoveryResult_withInvalidOperatorIdentifiedDiscoveryResult_shouldReturnNull() throws IOException
+    public void parseOperatorIdentifiedDiscoveryResult_withInvalidOperatorIdentifiedDiscoveryResult_shouldReturnNull
+            () throws
+                                                                                                                       IOException
     {
         // GIVEN
-        String jsonStr = "{ \"response\": {"
-                + " \"client_id\": \"XXX\", "
-                + " \"client_secret\": \"XXX\", "
-                + " \"apis\": {"
-                + " \"operatorid\": {"
-                + " \"not-link\": ["
-                + " { \"rel\": \"authorization\", "
-                + " \"href\": \"XXX\"}, "
-                + " { \"rel\": \"token\", "
-                + " \"href\": \"XXX\"}, "
-                + " { \"rel\": \"userinfo\", "
-                + " \"href\": \"XXX\"}, "
-                + " { \"rel\": \"premiuminfo\", "
-                + " \"href\": \"XXX\"} "
-                + "]}}}}";
-        ObjectMapper mapper = new ObjectMapper();
-        JsonNode root = mapper.readTree(jsonStr);
+        final String jsonStr =
+                "{ \"response\": {" + " \"client_id\": \"XXX\", " + " \"client_secret\": \"XXX\", " + " \"apis\": {" +
+                " \"operatorid\": {" + " \"not-link\": [" + " { \"rel\": \"authorization\", " +
+                " \"href\": \"XXX\"}, " + " { \"rel\": \"token\", " + " \"href\": \"XXX\"}, " +
+                " { \"rel\": \"userinfo\", " + " \"href\": \"XXX\"}, " + " { \"rel\": \"premiuminfo\", " +
+                " \"href\": \"XXX\"} " + "]}}}}";
+        final ObjectMapper mapper = new ObjectMapper();
+        final JsonNode root = mapper.readTree(jsonStr);
 
         // WHEN
-        ParsedOperatorIdentifiedDiscoveryResult parsedOperatorIdentifiedDiscoveryResult = JsonUtils.parseOperatorIdentifiedDiscoveryResult(root);
+        final ParsedOperatorIdentifiedDiscoveryResult parsedOperatorIdentifiedDiscoveryResult = JsonUtils
+                .parseOperatorIdentifiedDiscoveryResult(
+                root);
 
         // THEN
         assertNull(parsedOperatorIdentifiedDiscoveryResult);
@@ -319,23 +312,23 @@ public class JsonUtilsTest
     public void parseRequestTokenResponse_withValidResponse_shouldReturnResponseData() throws IOException
     {
         // GIVEN
-        String expectedAccessToken = "EXPECTED ACCESS_TOKEN";
-        String expectedTokenType = "EXPECTED TOKEN_TYPE";
-        String expectedRefreshToken = "EXPECTED REFRESH_TOKEN";
-        Integer expectedExpiresIn = new Integer("3600");
-        String expectedIdToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJub25jZSI6Im5vbmNlXzAucDNvd3pxbmR5dyIsInN1YiI6ImMwY2Q3NjFmZDA3ZTVlMTk3NDk3NmZiMzVkYzA2MmRlIiwiYW1yIjoiU01TX1VSTCIsImF1dGhfdGltZSI6MTQ1MDg4NDczNCwiYWNyIjoiMiIsImF6cCI6IjBjOWRmMjE5IiwiaWF0IjoxNDUwODg0NzMzLCJleHAiOjE0NTA4ODgzMzMsImF1ZCI6WyIwYzlkZjIxOSJdLCJpc3MiOiJodHRwOi8vb3BlcmF0b3JfYS5zYW5kYm94Lm1vYmlsZWNvbm5lY3QuaW8vb2lkYy9hY2Nlc3N0b2tlbiJ9.wlkZgNtN8ezAia6dZ8l2dYQBryB9skcIVN_6XzZn2mI";
-        String expectedJsonStr = "{ \"access_token\": \"" + expectedAccessToken + "\", "
-            + " \"token_type\": \"" + expectedTokenType + "\", "
-            + " \"expires_in\": \"" + expectedExpiresIn + "\", "
-            + " \"refresh_token\": \"" + expectedRefreshToken + "\", "
-            + " \"id_token\": \"" + expectedIdToken + "\"}";
+        final String expectedAccessToken = "EXPECTED ACCESS_TOKEN";
+        final String expectedTokenType = "EXPECTED TOKEN_TYPE";
+        final String expectedRefreshToken = "EXPECTED REFRESH_TOKEN";
+        final Integer expectedExpiresIn = Integer.valueOf("3600");
+        final String expectedIdToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9" +
+                                       ".eyJub25jZSI6Im5vbmNlXzAucDNvd3pxbmR5dyIsInN1YiI6ImMwY2Q3NjFmZDA3ZTVlMTk3NDk3NmZiMzVkYzA2MmRlIiwiYW1yIjoiU01TX1VSTCIsImF1dGhfdGltZSI6MTQ1MDg4NDczNCwiYWNyIjoiMiIsImF6cCI6IjBjOWRmMjE5IiwiaWF0IjoxNDUwODg0NzMzLCJleHAiOjE0NTA4ODgzMzMsImF1ZCI6WyIwYzlkZjIxOSJdLCJpc3MiOiJodHRwOi8vb3BlcmF0b3JfYS5zYW5kYm94Lm1vYmlsZWNvbm5lY3QuaW8vb2lkYy9hY2Nlc3N0b2tlbiJ9.wlkZgNtN8ezAia6dZ8l2dYQBryB9skcIVN_6XzZn2mI";
+        final String expectedJsonStr =
+                "{ \"access_token\": \"" + expectedAccessToken + "\", " + " \"token_type\": \"" + expectedTokenType +
+                "\", " + " \"expires_in\": \"" + expectedExpiresIn + "\", " + " \"refresh_token\": \"" +
+                expectedRefreshToken + "\", " + " \"id_token\": \"" + expectedIdToken + "\"}";
 
-        Calendar expectedTime = Calendar.getInstance();
-        Calendar expectedExpires = (Calendar)expectedTime.clone();
+        final Calendar expectedTime = Calendar.getInstance();
+        final Calendar expectedExpires = (Calendar) expectedTime.clone();
         expectedExpires.add(Calendar.SECOND, expectedExpiresIn);
 
         // WHEN
-        RequestTokenResponse requestTokenResponse = JsonUtils.parseRequestTokenResponse(expectedTime, expectedJsonStr);
+        final RequestTokenResponse requestTokenResponse = JsonUtils.parseRequestTokenResponse(expectedTime, expectedJsonStr);
 
         // THEN
         assertFalse(requestTokenResponse.hasErrorResponse());
@@ -354,15 +347,16 @@ public class JsonUtilsTest
     public void parseRequestTokenResponse_withErrorResponse_shouldReturnErrorResponse() throws IOException
     {
         // GIVEN
-        String expectedError = "EXPECTED ERROR";
-        String expectedErrorDescription = "EXPECTED ERROR_DESCRIPTION";
-        String expectedJsonStr = "{ \"error\": \"" + expectedError + "\", "
-                + " \"error_description\": \"" + expectedErrorDescription + "\"}";
+        final String expectedError = "EXPECTED ERROR";
+        final String expectedErrorDescription = "EXPECTED ERROR_DESCRIPTION";
+        final String expectedJsonStr =
+                "{ \"error\": \"" + expectedError + "\", " + " \"error_description\": \"" + expectedErrorDescription +
+                "\"}";
 
-        Calendar expectedTime = Calendar.getInstance();
+        final Calendar expectedTime = Calendar.getInstance();
 
         // WHEN
-        RequestTokenResponse requestTokenResponse = JsonUtils.parseRequestTokenResponse(expectedTime, expectedJsonStr);
+        final RequestTokenResponse requestTokenResponse = JsonUtils.parseRequestTokenResponse(expectedTime, expectedJsonStr);
 
         // THEN
         assertFalse(requestTokenResponse.hasResponseData());
@@ -375,12 +369,13 @@ public class JsonUtilsTest
     public void createParsedIdToken_withValidToken_shouldSucceed() throws IOException
     {
         // GIVEN
-        String expectedIdToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJub25jZSI6Im5vbmNlXzAucDNvd3pxbmR5dyIsInN1YiI6ImMwY2Q3NjFmZDA3ZTVlMTk3NDk3NmZiMzVkYzA2MmRlIiwiYW1yIjoiU01TX1VSTCIsImF1dGhfdGltZSI6MTQ1MDg4NDczNCwiYWNyIjoiMiIsImF6cCI6IjBjOWRmMjE5IiwiaWF0IjoxNDUwODg0NzMzLCJleHAiOjE0NTA4ODgzMzMsImF1ZCI6WyIwYzlkZjIxOSJdLCJpc3MiOiJodHRwOi8vb3BlcmF0b3JfYS5zYW5kYm94Lm1vYmlsZWNvbm5lY3QuaW8vb2lkYy9hY2Nlc3N0b2tlbiJ9.wlkZgNtN8ezAia6dZ8l2dYQBryB9skcIVN_6XzZn2mI";
-        String expectedPcr = "c0cd761fd07e5e1974976fb35dc062de";
-        String expectedNonce = "nonce_0.p3owzqndyw";
+        final String expectedIdToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9" +
+                                       ".eyJub25jZSI6Im5vbmNlXzAucDNvd3pxbmR5dyIsInN1YiI6ImMwY2Q3NjFmZDA3ZTVlMTk3NDk3NmZiMzVkYzA2MmRlIiwiYW1yIjoiU01TX1VSTCIsImF1dGhfdGltZSI6MTQ1MDg4NDczNCwiYWNyIjoiMiIsImF6cCI6IjBjOWRmMjE5IiwiaWF0IjoxNDUwODg0NzMzLCJleHAiOjE0NTA4ODgzMzMsImF1ZCI6WyIwYzlkZjIxOSJdLCJpc3MiOiJodHRwOi8vb3BlcmF0b3JfYS5zYW5kYm94Lm1vYmlsZWNvbm5lY3QuaW8vb2lkYy9hY2Nlc3N0b2tlbiJ9.wlkZgNtN8ezAia6dZ8l2dYQBryB9skcIVN_6XzZn2mI";
+        final String expectedPcr = "c0cd761fd07e5e1974976fb35dc062de";
+        final String expectedNonce = "nonce_0.p3owzqndyw";
 
         // WHEN
-        ParsedIdToken parsedIdToken = JsonUtils.createParsedIdToken(expectedIdToken);
+        final ParsedIdToken parsedIdToken = JsonUtils.createParsedIdToken(expectedIdToken);
 
         // THEN
         assertEquals(expectedIdToken, parsedIdToken.get_id_token());
@@ -393,10 +388,11 @@ public class JsonUtilsTest
     public void createParsedIdToken_withInvalidToken_shouldThrowException() throws IOException
     {
         // GIVEN
-        String expectedIdToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9eyJub25jZSI6Im5vbmNlXzAucDNvd3pxbmR5dyIsInN1YiI6ImMwY2Q3NjFmZDA3ZTVlMTk3NDk3NmZiMzVkYzA2MmRlIiwiYW1yIjoiU01TX1VSTCIsImF1dGhfdGltZSI6MTQ1MDg4NDczNCwiYWNyIjoiMiIsImF6cCI6IjBjOWRmMjE5IiwiaWF0IjoxNDUwODg0NzMzLCJleHAiOjE0NTA4ODgzMzMsImF1ZCI6WyIwYzlkZjIxOSJdLCJpc3MiOiJodHRwOi8vb3BlcmF0b3JfYS5zYW5kYm94Lm1vYmlsZWNvbm5lY3QuaW8vb2lkYy9hY2Nlc3N0b2tlbiJ9.wlkZgNtN8ezAia6dZ8l2dYQBryB9skcIVN_6XzZn2mI";
+        final String expectedIdToken =
+                "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9eyJub25jZSI6Im5vbmNlXzAucDNvd3pxbmR5dyIsInN1YiI6ImMwY2Q3NjFmZDA3ZTVlMTk3NDk3NmZiMzVkYzA2MmRlIiwiYW1yIjoiU01TX1VSTCIsImF1dGhfdGltZSI6MTQ1MDg4NDczNCwiYWNyIjoiMiIsImF6cCI6IjBjOWRmMjE5IiwiaWF0IjoxNDUwODg0NzMzLCJleHAiOjE0NTA4ODgzMzMsImF1ZCI6WyIwYzlkZjIxOSJdLCJpc3MiOiJodHRwOi8vb3BlcmF0b3JfYS5zYW5kYm94Lm1vYmlsZWNvbm5lY3QuaW8vb2lkYy9hY2Nlc3N0b2tlbiJ9.wlkZgNtN8ezAia6dZ8l2dYQBryB9skcIVN_6XzZn2mI";
 
         // THEN
-        thrown.expect(IllegalArgumentException.class);
+        this.thrown.expect(IllegalArgumentException.class);
 
         // WHEN
         JsonUtils.createParsedIdToken(expectedIdToken);
@@ -406,10 +402,11 @@ public class JsonUtilsTest
     public void createParsedIdToken_withInvalidPayload_shouldThrowException() throws IOException
     {
         // GIVEN
-        String expectedIdToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.XXXeyJub25jZSI6Im5vbmNlXzAucDNvd3pxbmR5dyIsInN1YiI6ImMwY2Q3NjFmZDA3ZTVlMTk3NDk3NmZiMzVkYzA2MmRlIiwiYW1yIjoiU01TX1VSTCIsImF1dGhfdGltZSI6MTQ1MDg4NDczNCwiYWNyIjoiMiIsImF6cCI6IjBjOWRmMjE5IiwiaWF0IjoxNDUwODg0NzMzLCJleHAiOjE0NTA4ODgzMzMsImF1ZCI6WyIwYzlkZjIxOSJdLCJpc3MiOiJodHRwOi8vb3BlcmF0b3JfYS5zYW5kYm94Lm1vYmlsZWNvbm5lY3QuaW8vb2lkYy9hY2Nlc3N0b2tlbiJ9.wlkZgNtN8ezAia6dZ8l2dYQBryB9skcIVN_6XzZn2mI";
+        final String expectedIdToken = "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9" +
+                                 ".XXXeyJub25jZSI6Im5vbmNlXzAucDNvd3pxbmR5dyIsInN1YiI6ImMwY2Q3NjFmZDA3ZTVlMTk3NDk3NmZiMzVkYzA2MmRlIiwiYW1yIjoiU01TX1VSTCIsImF1dGhfdGltZSI6MTQ1MDg4NDczNCwiYWNyIjoiMiIsImF6cCI6IjBjOWRmMjE5IiwiaWF0IjoxNDUwODg0NzMzLCJleHAiOjE0NTA4ODgzMzMsImF1ZCI6WyIwYzlkZjIxOSJdLCJpc3MiOiJodHRwOi8vb3BlcmF0b3JfYS5zYW5kYm94Lm1vYmlsZWNvbm5lY3QuaW8vb2lkYy9hY2Nlc3N0b2tlbiJ9.wlkZgNtN8ezAia6dZ8l2dYQBryB9skcIVN_6XzZn2mI";
 
         // THEN
-        thrown.expect(IOException.class);
+        this.thrown.expect(IOException.class);
 
         // WHEN
         JsonUtils.createParsedIdToken(expectedIdToken);
